hphp/hack/test/typecheck/tconst/invalid_access_root.php
<?hh

class C<T> {
  const T::Const x = 0;
}
